test/spec_vectors/memory_fill64/fail/module_64.wat
(module (memory i64 1 1) (func (export "testfn") (memory.fill (f64.const 10) (i64.const 20) (i32.const 30))))